# Godswood

./: Cargo.toml  README.md  config.json
assets/prefab/: godsnode.ron
config/: display.ron  input.ron
src/: app.rs  component.rs  main.rs  misc.rs  node.rs  resource.rs  state.rs  system.rs  tree.rs
