[package]
name = "Godswood"
version = "0.1.0"
authors = ["Stefan Liu <stefanliu@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "*"

[dependencies.amethyst]
git = "https://github.com/devfans/amethyst"
branch = "godswood"
features = ["metal", "nightly", "no-slow-safety-checks"]



